# Senuelo

./: .gitignore  README.md  pyproject.toml
examples/: campaign_quickstart.py  quickstart.py  scoring_quickstart.py
senuelo/: __init__.py
senuelo/api/: __init__.py  app.py  campaign_repository.py  config.py  deps.py  repository.py  schemas.py  seed.py
senuelo/api/routers/: __init__.py  audit.py  authorizations.py  campaigns.py  dashboard.py  scoring.py
senuelo/api/static/: dashboard.html
senuelo/campaigns/: __init__.py  models.py  simulation.py
senuelo/scope/: __init__.py  engine.py  errors.py  models.py  signing.py
senuelo/scoring/: __init__.py  assessment.py  cues.py  phish_scale.py
senuelo/storage/: __init__.py  audit.py  db.py  repository.py
tests/: conftest.py  test_api.py  test_assessment.py  test_campaigns.py  test_models.py  test_phish_scale.py  test_scope_engine.py  test_signing.py  test_storage.py
